--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <audio id="player" autoplay loop>
-        <source src="./music.mp3" type="audio/mp3"/>
+    <audio autoplay loop>
+        <source src="https://github.com/SherLockLam-ai/TestSN/blob/main/music.mp3" type="audio/mp3"/>
     </audio>
     <div id="wrapper">
         <div class="flag__birthday">
