--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src="https://github.com/SherLockLam-ai/TestSN/blob/main/music.mp3" type="audio/mp3"/>
+        <source src="https://github.com/SherLockLam-ai/TestSN/blob/main/music.mp3" type="audio/mpeg"/>
     </audio>
     <div id="wrapper">
         <div class="flag__birthday">
